<resources>
    <string name="app_name">Turistiandov2</string>
    <string name="resenahoteles">
        En el municipio La macarena podras encontrar diferentes hoteles desde 55.000 (COP) mil pesos colombianos, con gran variedad de ofertas donde la gran mayoria incluye internet y comidas.
    </string>

    <string name="resenarestaurantes">
        En este gran lugar no solo tendras grandes vistas de naturaleza sino tambien buenas vsitas para tu estomago,para que puedas deleitar tu lengua reserva ahora
    </string>

    <string name="resenaSitios">
        Caño Cristales es el principal atractivo turistico del municipio de La Macarena, pero no es el unico, esta extensa zona cuenta con gran parte de su territorio dentro del AMEM (area de Manejo Especial de la Macarena), representando escenarios admirables en donde se puede realizar Turismo de Naturaleza.
    </string>

    <string name="opcion1">
        Ingles
    </string>

    <string name="opcion2">
        Español
    </string>

    <string name="opcion3">
        Italiano
    </string>

    <string name="opcion4">
        Acerca de nosotros
    </string>

    <string name="hoteles">
        HOTELES
    </string>

    <string name="restaurantes">
        RESTAURANTES
    </string>

    <string name="sitios">
        SITIOS TURISTICOS
    </string>

    <string name="usuario">
        USUARIO
    </string>

    <string name="contraseña">
        CONTRASEÑA
    </string>

    <string name="ingresar">
        INGRESAR
    </string>

    <string name="bienvenido">
        BIENVENID@
    </string>

    <string name="resena">
        SOBRE MI
    </string>

    <string name="resenacont">
        Soy una estudiante de la tecnica de software en el cesde, si te interesa mi contenido o esta aplicacion estare disponible para ayudarte para que tu aplicacion de esnsueño se haga realidad
    </string>

    <string name="nombreacerca">
        ALEJANDRA MEJIA CORREA
    </string>

    <string name="nombre">
        NOMBRE:
    </string>

    <string name="precio">
        PRECIO:
    </string>

    <string name="telefono">
        CONTACTO:
    </string>

    <string name="guiaturistico">
        GUIA TURISTICO:
    </string>

    <string name="contactoguia">
        TELEFONO GUIA:
    </string>

    <string name="plato">
        PLATO RECOMENDADO:
    </string>





</resources>