<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/hoteles"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="115dp"
        android:layout_height="188dp"
        android:src="@drawable/cascada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.001"
        android:textAlignment="center"
        android:textSize="25dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/cornflowerblue"
        />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="90dp"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.001"
        android:textAlignment="center"
        android:textSize="25dp"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:textColor="@color/cornflowerblue"
        />

    <ImageView
        android:id="@+id/faceboock"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contraseña"
        app:layout_constraintVertical_bias="0.094" />

    <ImageView
        android:id="@+id/gmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toEndOf="@id/faceboock"
        app:layout_constraintTop_toBottomOf="@id/contraseña"
        app:layout_constraintVertical_bias="0.094" />

    <ImageView
        android:id="@+id/git"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toEndOf="@id/gmail"
        app:layout_constraintTop_toBottomOf="@id/contraseña"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/botonhoteles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/cornflowerblue"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gmail"
        app:layout_constraintVertical_bias="0.218" />


</androidx.constraintlayout.widget.ConstraintLayout>