<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/hoteles">

    <ImageView
        android:id="@+id/icono"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:src="@drawable/comer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.130" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/nombre"
        android:textColor="@color/cornflowerblue"
        android:textSize="15dp"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@id/icono"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.130" />

    <TextView
        android:id="@+id/lugarTuristico"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:text="Café de lithos"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toEndOf="@id/nombre"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.130" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="360dp"
        android:layout_height="215dp"
        android:src="@drawable/cafe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.370"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lugarTuristico"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/plato"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:text="@string/plato"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foto"
        app:layout_constraintVertical_bias="0.050" />

    <TextView
        android:id="@+id/platoRecomendado"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:text="Bandeja paisa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.520"
        app:layout_constraintStart_toEndOf="@id/plato"
        app:layout_constraintTop_toBottomOf="@id/foto"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/precioRestaurante"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:text="@string/precio"
        android:textAlignment="textStart"
        android:textColor="@color/cornflowerblue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.060"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plato"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/cop"
        android:layout_width="245dp"
        android:layout_height="45dp"
        android:text="97.500 COP"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@id/precioRestaurante"
        app:layout_constraintTop_toBottomOf="@id/platoRecomendado"
        app:layout_constraintVertical_bias="0.070" />

    <TextView
        android:id="@+id/telefono"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:text="@string/telefono"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/precioRestaurante"
        app:layout_constraintVertical_bias="0.050" />

    <TextView
        android:id="@+id/numeroContacto"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:text="5255145525"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@id/telefono"
        app:layout_constraintTop_toBottomOf="@id/cop"
        app:layout_constraintVertical_bias="0.055" />


</androidx.constraintlayout.widget.ConstraintLayout>