<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaSolucion"
    android:background="@drawable/hoteles"
    >

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/foto"
        android:layout_width="186dp"
        android:layout_height="232dp"
        android:src="@drawable/foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/resena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resena"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/foto"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/contresena"
        android:layout_width="190dp"
        android:layout_height="192dp"
        android:text="@string/resenacont"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/foto"
        app:layout_constraintTop_toBottomOf="@+id/resena"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/gmail"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contresena"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/correo"
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:text="alejandramejiacorrea@gmail.com"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/gmail"
        app:layout_constraintTop_toBottomOf="@+id/foto"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/git"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="228dp"
        android:src="@drawable/github"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gmail"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/github"
        android:layout_width="344dp"
        android:layout_height="38dp"
        android:text="AlejandraMejiaC"
        android:textAlignment="center"
        android:textColor="@color/cornflowerblue"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/git"
        app:layout_constraintTop_toBottomOf="@+id/correo"
        app:layout_constraintVertical_bias="0.09" />


</androidx.constraintlayout.widget.ConstraintLayout>